--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "npm test"
   },
   "author": "Rodrigo Espinosa de los Monteros",
   "license": "MIT",
   "dependencies": {
-    "cap": "^0.2.1"
+    "cap": "^0.2.1",
+    "express": "^4.18.2",
+    "lowdb": "^6.0.1",
+    "node-fetch": "^3.3.2"
   }
 }
