--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "sudo $(which node) src/server.js",
     "test": "npm test"
   },
   "author": "Rodrigo Espinosa de los Monteros",
