--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "framer-motion": "^10.16.4",
-    "next": "14.0.0",
+    "next": "^14.0.0",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18"
   },
