--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.4.0",
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.18.0",
+    "mongodb": "^6.3.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18.2.0",
